[k32w] Solve compilation issues
Signed-off-by: Doru Gucea <doru-cristian.gucea@nxp.com>

--- a/examples/Makefile-jn5189
+++ b/examples/Makefile-jn5189
@@ -43,7 +43,6 @@ BuildJobs                      ?= 10
 
 configure_OPTIONS               = \
     --enable-cli                  \
-    --enable-diag                 \
     --enable-ftd                  \
     --enable-mtd                  \
     --enable-ncp                  \
@@ -87,12 +86,13 @@ COMMONCFLAGS                          := \
     -ffunction-sections                  \
     -Os                                  \
     -g                                   \
-	-DCPU_JN518X                         \
-	-DCPU_JN518X_REV=2                   \
-	-DJENNIC_CHIP_FAMILY_JN518x          \
-	-DJENNIC_CHIP_FAMILY_NAME=_JN518x    \
-	-DSDK_DEBUGCONSOLE=0                 \
+    -DCPU_JN518X                         \
+    -DCPU_JN518X_REV=2                   \
+    -DJENNIC_CHIP_FAMILY_JN518x          \
+    -DJENNIC_CHIP_FAMILY_NAME=_JN518x    \
+    -DSDK_DEBUGCONSOLE=0                 \
     -D$(CONFIG_FILE)                     \
+    -DUSE_RTOS=0                         \
     -I$(CONFIG_FILE_PATH)                \
     $(NULL)
 
